12_fullCluster/k8s/api-test-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: api-test-deployment
  labels:
    app: api-test
    type: test-backend

spec:
  template:
    metadata:
      name: api-test-pod
      labels:
        app: api-test
        type: test-backend

    spec:
      containers:
        - name: my-mybackend-container
          image: mmazepa/devops_api-test

  replicas: 3
  selector:
    matchLabels:
      type: test-backend
