12_fullCluster/k8s/backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: myapp-backend
    type: backend

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        app: myapp-backend
        type: backend

    spec:
        containers:
          - name: my-mybackend-container
            image: mmazepa/devops_mybackend
  replicas: 3
  selector:
    matchLabels:
      type: backend
