12_fullCluster/k8s/myapp-service-nodeport.yml
apiVersion: v1

kind: Service

metadata:
  name: myapp-service

spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 80
      nodePort: 30009

  selector:
    app: mybackend
    type: backend
